--- a/CV/contact.html
+++ b/CV/contact.html
@@ -20,7 +20,7 @@
     </div>
 
     <!-- title -->
-    <h1 class="contact-label-title">Contact Me te rog</h1>
+    <h1 class="contact-label-title">Contact Me</h1>
     <div class="text-contact" id="label">
       Please fill out the required informations and I will get back to you very
       soon
